Fix: navbar was not collapsing ,fixed

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -40,13 +40,13 @@
   position: absolute;
 }
 .img-front {
-  width: 60%;
+  width: 50%;
   height: auto;
   border-left: 4px solid var(--primario);
   border-bottom: 4px solid var(--primario);
   z-index: 1;
-  right: 50px;
-  top: 0px;
+  right: 100px;
+  top: 50px;
 }
 .img-back {
   width: 50%;
@@ -61,9 +61,11 @@
 @media (max-width: 1024px) {
   .img-front {
     width: 70%;
+    right: 0;
   }
   .img-back {
     width: 60%;
+    top: 30vw;
     
   }
   .hero-container {
@@ -108,6 +110,7 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
   }
+  
 }
 
 /*Services Section_____________________*/
